fix overflow in vivo v29e

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,12 @@ nav {
     }
 }
 
+@media (max-width: 370px) {
+    nav {
+        padding: 0.5em;
+    }
+}
+
 nav p{
     width: max-content;
     padding: 0.5em 1em;
@@ -41,6 +47,15 @@ nav p{
         margin-right: 0.25em;
         font-weight: normal;
         font-size: 0.9rem;
+    }
+}
+
+@media (max-width: 370px) {
+    nav p {
+        padding: 0.5em;
+        margin-right: 0.2em;
+        font-weight: normal;
+        font-size: 0.85rem;
     }
 }
 
@@ -79,10 +94,22 @@ main{
     font-size: clamp(0.85rem, 1.5vw, 1.25rem);
 }
 
+@media (max-width: 400px) {
+    .student_info__first p,.student_info__second p {
+        font-size: 0.75rem;
+    }
+}
+
 .student_info__first span,.student_info__second span{
     color: rgb(37, 201, 201);
     font-weight: 600;
     font-size: clamp(1rem, 1.5vw, 1.25rem);
+}
+
+@media (max-width: 400px) {
+    .student_info__first span, .student_info__second span {
+        font-size: 0.75rem;
+    }
 }
 
 .titles{
@@ -95,11 +122,20 @@ main{
     margin-bottom: 1em;
 }
 
+
+
 .titles div {
     padding: 0.5em 1em;
     color:white;
     font-size: clamp(0.95rem, 1.5vw, 1.25rem);
     cursor: pointer;
+}
+
+@media (max-width: 400px) {
+    .titles {
+        font-size: 0.85rem;
+        padding: 0.5em;
+    }
 }
 
 .titles div:first-child {
@@ -156,7 +192,6 @@ main{
     font-weight: bold;
     font-size: clamp(0.75rem, 1.5vw, 1rem);
 }
-
 
 .info_section img {
     display: block;
